postgres/db-service.yaml
apiVersion: v1
# Kind for service
kind: Service
metadata:
  # Name your service
  name: postgresdb
  labels:
    app: postgresdb
spec:
  # Choose how to expose your service
  type: LoadBalancer
  ports:
    -
      name: "postgresdb"
      port: 5432
      nodePort: 30005
      targetPort: 5432
      protocol: TCP

  # Pod to route service traffic  
  selector:
    app: postgresdb
